--- a/src/main/resources/templates/new-category-page.html
+++ b/src/main/resources/templates/new-category-page.html
@@ -87,7 +87,8 @@
         <div class="new-category-page-container1">
           <h1 class="new-category-page-text">Новая категория</h1>
         </div>
-        <form th:method="POST" th:action="@{/category/add}" th:object="${category}">
+        <div th:if="${error} != null" th:text="${error}"></div>
+        <form th:method="POST" th:action="@{/categories/add}" th:object="${category}">
           <div class="new-category-page-container2" >
               <input
                       type="text"
@@ -106,7 +107,7 @@
               </button>
             </div>
             <div class="button-cancel-container button-cancel-root-class-name">
-              <a th:href="@{'/category/all?pageNumber=0'}">
+              <a th:href="@{'/categories/all?page=0'}">
                 <button type="button" class="button-cancel-button">
                   <span>
                     <span>Отменить</span>
