--- a/src/main/resources/templates/profile-edit-page.html
+++ b/src/main/resources/templates/profile-edit-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Profile-page - Travel Agency</title>
-    <meta property="og:title" content="Profile-page - Travel Agency" />
+    <title>Редактирование профиля</title>
+    <meta property="og:title" content="NewEdit-Profile-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -38,13 +38,13 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap"
             data-tag="font"
     />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" th:href="@{/style/style.css}" type="text/css" />
 </head>
 <body>
 <div>
-    <link href="/style/profile-page.css" rel="stylesheet" />
+    <link th:href="@{/style/new-edit-profile-page.css}" rel="stylesheet" type="text/css" />
 
-    <div class="profile-page-container">
+    <div class="new-edit-profile-page-container">
         <header data-role="Header" class="header-header">
             <img
                     alt="logo"
@@ -79,45 +79,90 @@
                 </div>
             </div>
         </header>
-        <div class="profile-page-container1">
-            <h1 class="profile-page-text">
+        <div class="new-edit-profile-page-container1">
+            <h1 class="new-edit-profile-page-text">
                 <span>Редактирование профиля</span>
                 <br />
             </h1>
         </div>
-        <span class="profile-page-text03">
-          <span>Данные, которые используются для входа и создания заказов</span>
+        <span class="new-edit-profile-page-text03">
+          <span>Введите свои данные для покупок</span>
+          <br />
+          <span>и придумайте пароль</span>
           <br />
         </span>
         <div class="profile-page-container2">
             <label class="profile-page-text06" th:text="'Логин: ' + ${currentUser.login}"></label>
+        </div>
+        <div
             <label class="profile-page-text08" th:text="'Номер телефона: ' + ${currentUser.phone}"></label>
         </div>
-        <form th:method="POST" th:action="@{/profile/saveedit}" th:object="${currentUser}">
+        <form enctype="application/x-www-form-urlencoded"
+              class="new-edit-profile-page-form"
+              th:method="POST" th:action="@{/profile/saveedit}" th:object="${currentUser}">
             <div>
                 <label>
-                    <input type="text" th:field="*{name}" placeholder="ФИО">
+                    <input
+                            type="text" th:field="*{name}"
+                            placeholder="ФИО"
+                            autocomplete="name"
+                            class="new-edit-profile-page-input input">
                 </label>
             </div>
             <div>
                 <label>
-                    <input type="password" th:field="*{password}" placeholder="Пароль">
+                    <input
+                            type="password"
+                            th:field="*{password}"
+                            placeholder="Пароль"
+                            autocomplete="new-password"
+                            class="new-edit-profile-page-input3 input"
                 </label>
             </div>
             <div>
                 <label>
-                    <input type="password" th:field="*{passwordConfirm}" placeholder="Повторите пароль">
-                    <errors th:if="${passwordError}"> Пароли не совпадают </errors>
+                    <input
+                            type="password"
+                            th:field="*{passwordConfirm}"
+                            placeholder="Повторите пароль"
+                            autocomplete="new-password"
+                            class="new-edit-profile-page-input4 input"
+
                 </label>
             </div>
-          <button type="submit" class="profile-page-button">
+            <div>
+                <errors th:if="${passwordError}"> Пароли не совпадают! </errors>
+            </div>
+            <div>
+                <errors th:if="${fieldError}"> Все поля должны быть заполнены! </errors>
+            </div>
+            <div>
+            <select class="new-edit-profile-page-select input">
+                <option value="Null">Роль</option>
+                <option value="Option 2">Option 2</option>
+                <option value="Option 3">Option 3</option>
+            </select>
+            </div>
+          <button type="submit" class="new-edit-profile-page-button">
             <span>
               <span>Сохранить</span>
               <br />
             </span>
           </button>
+
         </form>
-          <a th:href="@{/profile/{id}(id=${currentUser.id})}">Отмена</a>
+        <button type="button" class="new-edit-profile-page-button1">
+          <span>
+            <a th:href="@{/profile/{id}(id=${currentUser.id})}">Отмена</a>
+            <br />
+          </span>
+        </button>
+        <button type="button" class="new-edit-profile-page-button2">
+          <span>
+            <span>Дезактивировать</span>
+            <br />
+          </span>
+        </button>
           <footer class="footer-footer">
             <span class="footer-text">
               <span>© 2022 С18-501, все права зарегистрированы.</span>
