--- a/src/main/resources/templates/orders-page.html
+++ b/src/main/resources/templates/orders-page.html
@@ -27,6 +27,62 @@
         background-color: var(--dl-color-gray-background);
 
       }
+
+      .popup {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+      .popup .popuptext {
+        visibility: hidden;
+        width: 370px;
+        background-color: #FFFFFF;
+        border-color: #000000;
+        border-width: 2px;
+        color: #000;
+        text-align: left;
+        border-radius: 15px;
+        padding: 8px 0;
+        position: absolute;
+        z-index: 1;
+        top: 100%;
+        left: 0%;
+        margin-left: -80px;
+      }
+
+      /* Popup arrow */
+      .popup .popuptext::after {
+        content: "";
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #FFFFFF transparent transparent transparent;
+      }
+      /* Toggle this class - hide and show the popup */
+      .popup .show {
+        visibility: visible;
+        -webkit-animation: fadeIn 1s;
+        animation: fadeIn 1s;
+      }
+
+      /* Add animation (fade in the popup) */
+      @-webkit-keyframes fadeIn {
+        from {opacity: 0;}
+        to {opacity: 1;}
+      }
+
+      @keyframes fadeIn {
+        from {opacity: 0;}
+        to {opacity:1 ;}
+      }
+
     </style>
     <link
       rel="stylesheet"
@@ -87,23 +143,16 @@
           <label class="orders-page-text1">Пользователь</label>
           <label class="orders-page-text1">Статус</label>
           <label class="orders-page-text1">Сумма</label>
-          <label class="orders-page-text1"></label>>
         </div>
-        <div class="orders-page-container3" th:each="order : ${orders}">
-          <div class="orders-page-container4">
+        <div class="orders-page-container3" >
+          <div class="orders-page-container4" th:each="order : ${orders}">
+
             <label class="orders-page-text1" th:text="${order.getNumber()}"></label>
             <label class="orders-page-text2" th:text="${order.getUsername()}"></label>
-            <label class="orders-page-text3" th:text="${order.getStatus()}"></label>
+            <a class="orders-page-text3" th:text="${order.getStatus()}" th:href="@{/orders/choosenewstatus(orderid=${order.getNumber()})}"></a>
+<!--            <label ></label>-->
             <label class="orders-page-text4" th:text="${order.getPrice()}"></label>
-            <a>
-              <button>
-                <svg viewBox="0 0 1024 1024" class="orders-page-icon">
-                  <path
-                          d="M512 384q52 0 90 38t38 90-38 90-90 38-90-38-38-90 38-90 90-38zM512 726q88 0 151-63t63-151-63-151-151-63-151 63-63 151 63 151 151 63zM512 192q158 0 286 88t184 232q-56 144-184 232t-286 88-286-88-184-232q56-144 184-232t286-88z"
-                  ></path>
-                </svg>
-              </button>
-            </a>
+
           </div>
         </div>
         <div class="orders-page-container5"></div>
