--- a/src/main/resources/templates/orders-page.html
+++ b/src/main/resources/templates/orders-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
     <title>Заказы - BootlegAmazon</title>
     <meta property="og:title" content="Orders-page - Travel Agency" />
