Кнопка домашней страницы и переход с иконки пользователя в профиль

--- a/src/main/resources/templates/item-page.html
+++ b/src/main/resources/templates/item-page.html
@@ -51,11 +51,16 @@
 
       <div class="item-page-container">
         <header data-role="Header" class="header-header">
-          <img
-            alt="logo"
-            src="https://i.imgur.com/vizTO84.png"
-            class="header-image"
-          />
+          <button type="button" class="profile-page-button1">
+          <span>
+            <a th:href="@{'/items/all?page=0'}">
+              <img
+                      alt="logo"
+                      src="https://i.imgur.com/vizTO84.png"
+                      class="header-image"
+              /></a>
+          </span>
+          </button>
           <div class="header-container">
             <div class="tool-box-container tool-box-root-class-name">
               <div class="tool-box-container1">
