--- a/src/main/resources/templates/admin-panel-page.html
+++ b/src/main/resources/templates/admin-panel-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <title>Bootleg Amazon</title>
   <meta property="og:title" content="Travel Agency" />
@@ -45,11 +45,16 @@
 
   <div class="catalog-page-container">
     <header data-role="Header" class="header-header">
-      <img
-              alt="logo"
-              src="https://i.imgur.com/vizTO84.png"
-              class="header-image"
-      />
+      <button type="button" class="profile-page-button1">
+          <span>
+            <a th:href="@{'/items/all?page=0'}">
+              <img
+                      alt="logo"
+                      src="https://i.imgur.com/vizTO84.png"
+                      class="header-image"
+              /></a>
+          </span>
+      </button>
     </header>
     <div class="catalog-page-container1">
       <h1 class="catalog-page-text">Админ Панель</h1>
