--- a/src/main/resources/templates/profile-edit-page.html
+++ b/src/main/resources/templates/profile-edit-page.html
@@ -46,11 +46,16 @@
 
     <div class="new-edit-profile-page-container">
         <header data-role="Header" class="header-header">
-            <img
-                    alt="logo"
-                    src="https://i.imgur.com/vizTO84.png"
-                    class="header-image"
-            />
+            <button type="button" class="profile-page-button1">
+          <span>
+            <a th:href="@{'/items/all?page=0'}">
+              <img
+                      alt="logo"
+                      src="https://i.imgur.com/vizTO84.png"
+                      class="header-image"
+              /></a>
+          </span>
+            </button>
             <div class="header-container">
                 <div class="tool-box-container tool-box-root-class-name">
                     <div class="tool-box-container1">
