--- a/src/main/resources/templates/profiles-page.html
+++ b/src/main/resources/templates/profiles-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
     <title>Profiles-page - Travel Agency</title>
     <meta property="og:title" content="Profiles-page - Travel Agency" />
@@ -46,11 +46,16 @@
 
       <div class="profiles-page-container">
         <header data-role="Header" class="header-header">
-          <img
-            alt="logo"
-            src="https://i.imgur.com/vizTO84.png"
-            class="header-image"
-          />
+          <button type="button" class="profile-page-button1">
+          <span>
+            <a th:href="@{'/items/all?page=0'}">
+              <img
+                      alt="logo"
+                      src="https://i.imgur.com/vizTO84.png"
+                      class="header-image"
+              /></a>
+          </span>
+          </button>
           <div class="header-container">
             <div class="tool-box-container tool-box-root-class-name">
               <div class="tool-box-container1">
