Получение UserId по UserDetails, методы для UserService

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -121,7 +121,7 @@
         </button>
         <button type="button" class="profile-page-button">
           <span>
-            <!-- <a th:href="@{'/orders/foruser'}"> -->
+             <a th:href="@{'/orders/foruser?page=0'}">
             <span>Посмотреть все свои заказы</span>
             <br />
           </span>
