--- a/src/main/resources/templates/orders-page.html
+++ b/src/main/resources/templates/orders-page.html
@@ -165,6 +165,7 @@
           <label class="orders-page-text1">Пользователь</label>
           <label class="orders-page-text1">Статус</label>
           <label class="orders-page-text1">Сумма</label>
+          <label class="orders-page-text1"></label>
         </div>
         <div class="orders-page-container3" >
           <div class="orders-page-container4" th:each="order : ${orders}">
@@ -178,6 +179,16 @@
               <a class="orders-page-text3" th:text="${order.getStatus()}" th:href="@{/orders/choosenewstatus(orderid=${order.getNumber()})}"></a>
             </div>
             <label class="orders-page-text4" th:text="${order.getPrice()}"></label>
+
+            <a th:href="@{'/orders/' + ${order.getNumber()}}">
+              <button>
+                <svg viewBox="0 0 1024 1024" class="orders-page-icon">
+                  <path
+                          d="M512 384q52 0 90 38t38 90-38 90-90 38-90-38-38-90 38-90 90-38zM512 726q88 0 151-63t63-151-63-151-151-63-151 63-63 151 63 151 151 63zM512 192q158 0 286 88t184 232q-56 144-184 232t-286 88-286-88-184-232q56-144 184-232t286-88z"
+                  ></path>
+                </svg>
+              </button>
+            </a>
 
           </div>
         </div>
