--- a/src/main/resources/templates/payment-success-page.html
+++ b/src/main/resources/templates/payment-success-page.html
@@ -67,7 +67,7 @@
           </span>
         </button>
       </a>
-      <a th:href="@{'/orders/foruser'}">
+      <a th:href="@{'/orders/foruser?page=0'}">
         <button type="button" class="button-add-button">
           <span>
             <h2>Посмотреть мои заказы</h2>
